--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,2 +1,7 @@
-<h3>Ready to Use</h3>
+<h3>Movies</h3>
 
+<% @movies.each do |movie| %>
+  <p><%= movie.title %></p>
+<% end %>
+
+<p><%= link_to "Upload a new subtitle file", new_movie_path %></p>
