--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,7 @@
 <h3><%= @movie.title %> </h3>
 
 <p>
-  <%= @movie.script %>
+  <% @movie.sentences.each do |sentence| %>
+    <p><%= link_to sentence.content, sentence_path(sentence) %></p>
+  <% end %>
 </p>
