--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,9 +1,16 @@
 <h3><%= @movie.title %> </h3>
 
-<!-- in the end, don't show sentences like this.  just show words in hi/med/lo groups -->
+<h5>High Frequency Words (and # of occurrences)</h5>
+<% @words_hi.each do |word| %>
+  <li><%= link_to word.content, word_path(word) %> - <%= word.frequency %></li>
+<% end %>
 
-<p>
-  <% @movie.sentences.each do |sentence| %>
-    <p><%= link_to sentence.content, sentence_path(sentence) %></p>
-  <% end %>
-</p>
+<h5>Medium Frequency Words</h5>
+<% @words_med.each do |word| %>
+  <li><%= link_to word.content, word_path(word) %> - <%= word.frequency %></li>
+<% end %>
+
+<h5>Low Frequency Words</h5>
+<% @words_lo.each do |word| %>
+  <li><%= link_to word.content, word_path(word) %> - <%= word.frequency %></li>
+<% end %>
