Appears to show all show pages properly w frequency and context

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,4 +4,4 @@
   <p><%= link_to movie.title, movie_path(movie) %></p>
 <% end %>
 
-<p><%= link_to "Upload a new subtitle file", new_movie_path %></p>
+<h5><%= link_to "Upload a new subtitle file", new_movie_path %></h5>
