--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,16 +4,31 @@
 <% thirds_split = total_words/3 %>
 
 <h5>High Frequency Words (and # of occurrences)</h5>
-<% @movie.word_counts[0..thirds_split].each do |word_freq_pair| %> 
-  <li><%= word_freq_pair[0] %> - <%= word_freq_pair[1] %></li>
+<% @movie.word_counts[0..thirds_split].each do |word_info| %> 
+  <% word = word_info[0] %>
+  <% frequency = word_info[1] %>
+  <% word_object = word_info[2] %>
+
+  <li><%= link_to word, movie_word_path(@movie, word_object.first) %> - 
+    <%= frequency %></li>
 <% end %>
 
 <h5>Medium Frequency Words</h5>
-<% @movie.word_counts[thirds_split..thirds_split*2].each do |word_freq_pair| %> 
-  <li><%= word_freq_pair[0] %> - <%= word_freq_pair[1] %></li>
+<% @movie.word_counts[thirds_split..thirds_split*2].each do |word_info| %> 
+  <% word = word_info[0] %>
+  <% frequency = word_info[1] %>
+  <% word_object = word_info[2] %>
+
+  <li><%= link_to word, movie_word_path(@movie, word_object.first) %> - 
+    <%= frequency %></li>
 <% end %>
 
 <h5>Low Frequency Words</h5>
-<% @movie.word_counts[thirds_split*2..-1].each do |word_freq_pair| %> 
-  <li><%= word_freq_pair[0] %> - <%= word_freq_pair[1] %></li>
+<% @movie.word_counts[thirds_split*2..-1].each do |word_info| %> 
+  <% word = word_info[0] %>
+  <% frequency = word_info[1] %>
+  <% word_object = word_info[2] %>
+
+  <li><%= link_to word, movie_word_path(@movie, word_object.first) %> - 
+    <%= frequency %></li>
 <% end %>
