--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,17 @@
 </head>
 <body>
 
-<% if flash[:notice].present? %>
-  <%= flash[:notice] %>
-<% end %>
-<%= yield %>
+  <%= render 'layouts/navbar' %>
+  
+  <div class="row">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  <div>
+
+  <div class="row">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
+
