--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Mce</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <%= render 'layouts/navbar' %>
-  
-  <div class="row">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-  <div>
+    <title><%= content_for?(:title) ? yield(:title) : "FCE" %></title>
 
-  <div class="row">
-    <%= yield %>
-  </div>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
 
-</body>
+  <body>
+
+    <%= render 'layouts/navbar' %>
+    
+    <div class="row">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    <div>
+
+    <div class="row">
+      <%= yield %>
+    </div>
+
+    <%= javascript_include_tag "application" %>
+
+  </body>
 </html>
-
