--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
 
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/"><em>Film Club English</em></a></h1>
+        <h1><a href="/">Film Club English</a></h1>
       </li>
     </ul>
 
