Added methods in sentence model for finding previous and following sentences

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,7 +9,7 @@
   <% frequency = word_info[1] %>
   <% word_object = word_info[2] %>
 
-  <li><%= link_to word, movie_word_path(@movie, word_object.first) %> - 
+  <li><%= link_to word, movie_word_path(@movie, word_object.first), class: 'word_link' %> - 
     <%= frequency %></li>
 <% end %>
 
@@ -32,3 +32,7 @@
   <li><%= link_to word, movie_word_path(@movie, word_object.first) %> - 
     <%= frequency %></li>
 <% end %>
+
+<div id="word_context">
+  
+</div>
