--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -5,8 +5,8 @@
 
 <h5>.. and the context <em><%= @word.content %></em> appears in:</h5>
 
-<!-- ideally, remove Arel from views! won't be easy bc of the each block-->
-
+<!-- ideally, remove AR from views! won't be easy bc of the each block-->
+<!-- method in sentence model for prev and following sentences -->
 
 
 <% @sentences.each do |sentence| %>
