--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -7,7 +7,7 @@
 
 <!-- ideally, remove AR from views! won't be easy bc of the each block-->
 <!-- method in sentence model for prev and following sentences -->
-
+<!-- ready to remove that AR, using .previous and .following methods -->
 
 <% @sentences.each do |sentence| %>
   <% number = sentence.number %>
