Got right div to scroll on overflow, and show at browser position

--- a/app/assets/stylesheets/two_column_word_show.css
+++ b/app/assets/stylesheets/two_column_word_show.css
@@ -3,9 +3,10 @@
 }
 
 .word_context {
-  /*position: sticky;*/
   float: left;
-  /*overflow: scroll;*/
+  max-height: 90%;
+  position: fixed;
+  overflow: scroll;
 }
 
 .context_block p {
