Styled the right column with word contexts

--- a/app/assets/stylesheets/two_column_word_show.css
+++ b/app/assets/stylesheets/two_column_word_show.css
@@ -2,7 +2,13 @@
   float: left;
 }
 
+.word_list li {
+  list-style-type: none;
+}
+
 .word_context {
+  padding-left: 30px;
+  border-left: 1px dotted #DE4260;
   float: left;
   max-height: 90%;
   position: fixed;
