--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
 
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">Film Club English</a></h1>
+        <h1><a href="/">Oscar</a></h1>
       </li>
     </ul>
 
@@ -11,7 +11,6 @@
       <ul class="right">
         <li><%= link_to "Add a Subtitle File", new_movie_path %></li>
         <% if user_signed_in? %>
-          <li class="active"><%= current_user.email %></li>
           <li class="active"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li class="active"><%= link_to "Sign Up", new_user_registration_path%></li>
