--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,13 +3,13 @@
 
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">Oscar</a></h1>
+        <h1><a href="/">O S C A R</a></h1>
       </li>
     </ul>
 
     <section class="top-bar-section">
       <ul class="right">
-        <li><%= link_to "Add a Subtitle File", new_movie_path %></li>
+        <li><%= link_to "Add Subtitles", new_movie_path %></li>
         <% if user_signed_in? %>
           <li class="active"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
         <% else %>
