--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,12 @@
-<h3>Movies</h3>
+<div class="row">
+  <div class="small-10 large-4 columns home">
+    <h3>Movies</h3>
+    <% @movies.each do |movie| %>
+      <p><%= link_to movie.title, movie_path(movie) %></p>
+    <% end %>
+  </div>
 
-<% @movies.each do |movie| %>
-  <p><%= link_to movie.title, movie_path(movie) %></p>
-<% end %>
+  <div class="small-0 large-8 columns">
 
+  </div>
+</div>
