--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-4 large-4 columns">
+  <div class="small-4 large-4 columns show">
     <div class="word_list">
       <h3><%= @movie.title %> </h3>
 
