--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,12 +1,104 @@
 <div class="row">
-  <div class="small-10 large-4 columns home">
-    <h3>Movies</h3>
+  <div class="small-10 large-5 columns home">
+    <h5>Vocabulary Sets</h5><br>
     <% @movies.each do |movie| %>
       <p><%= link_to movie.title, movie_path(movie) %></p>
     <% end %>
   </div>
 
-  <div class="small-0 large-8 columns">
-
+  <div class="small-0 large-7 columns ascii_img">
+    <pre style="font: 10px/5px monospace;">                                                                                            
+                                                                                            
+                                                                                            
+                                                                                            
+                          ````````````````                                                  
+                       `.````            ````                                               
+               `` ``````                    `             `                                 
+              ````.``                                      `                                
+             ``.````                                        `                               
+             ``..```                                        `                               
+            ``.````.                ````..`                  .                              
+            ```````               ``...`....                 `                              
+            ``````               .....``....                  `                             
+             `````               `.````......                 .                             
+            `````               ```````......                  `                            
+          `.``.`.               ``````.......                  `                            
+        `........               ``````.......                   .                           
+         ........               ``````.......                                               
+         `.......               ``````........                   `                          
+         ``......               ``````........                    .                         
+         ........          `..  ```````````.......`                `                     `` 
+         . ......           ......````````````..`                   .                   `   
+         `.......              ..............`                       .                      
+         ..`.....              `.............`                         .             `      
+         .`......               ` `..........                            ``        `        
+         ``......               `````````....                                 ``         `  
+         ``.......               ```````````.                                               
+         `........                ```.`....`..                                              
+         ```......                `````.........                                            
+         `..........`       ``....```............                                           
+         .......`.....`    .......`````.`.`.........                                        
+         ``.`......................`````...............`                                    
+         `. .`...........`......... ``````................                                  
+         ``.............`...`.....`  .....................                                  
+          `............`......``.`. ``....................                                  
+            .................`````.`...``..................                `              ` 
+             .........`......````` ....``............`......                                
+               ...... `......`````.....``...`................              `                
+                 ....``......``.``.`...``.. ```..............`             `                
+                   .`........```.`.....```.```....`...........`                        `    
+                    `........``````.... ```````.`...............              `             
+                   `.........````.`..`. `` ```..........`.`......     `                     
+                  ...........``````...` `  ````........`.``.``...               `           
+                 ``..........``````...`    ````........`````.`....     `  ```   ```         
+                  ..........`..````...`     ```........```......`.. `      `  `  .` ` `     
+                  ............```.`...`  ``````.........``....`.`...     ` ````   `      `  
+                  ...........``.```...``  `````.........`..``..`.....   `  ` ``           ` 
+                  ...........`...`...`.`.``.```........... `` `````..  ` ` ` ``   ` `       
+                  ............```......``` ``............ ``````...... ``    `.      `     `
+                  ............``........```````......... ````````.....   ``   ``   `       `
+                  .............`........`.`````......````` ````.`.....    `     .  ```     .
+                  `............``..`.......```.......`.` .`.`````.....`     ```  `  ``   ` .
+                  `............``...`...``.```.`........`````.``..`...       `  ` ` ```    .
+                   .............`..```....```.`..........`.`.``...`...   ``  `.``   ` ` ` ``
+                   ................``....`..``............. .`...`...`  ````  ` `   .   `` `
+                    ..............````.......``............  ........   ` `````````    ``  `
+                    `............`.````......```........... ``.......`   `` ````  ```  `` ` 
+                      ...........``````........`...........` ``.....``  `` `` ``     `` ``. 
+                       `..........``````...`..``...........````....``.``````.`.```     ```  
+                        `........`.`````....`...............````````` `````.````.`  `` . .` 
+                         `........``.``.`...``..`...........`.`...```` ````.`......`    .`.`
+                          .......``.`````.````...`..........`.`````````````....`..`.` `  ```
+                          `......`.````````````.............`.`````.`.`. ..`..``...`...````.
+                        `````..``.`.````````.```............`.`.````...```..````````.``.`...
+                     `````````.``````````````````............``````....``.``..`````.`````.`.
+                  ````````````.`.`````````````````............``````..````.```.``..``.`.`.``
+                ````````````````` `````.``..`..................``````.```````..`..`..```````
+        ```  ````````````````````` ``.`.`.`....``.............```````.````...`.``.``.``.``..
+   ```````````````````````````.````.`..`..`.```...............`````.`.......`.`..`.``.`.``..
+  ``````````````````````````.`````` ` ``.``.``......`.........`````..`.```..` .````...`....`
+`````````````````````````````````` ````...`.``....`...`........``.``.```..````.````.``...``.
+````````.```````````````.`..`````  .` ``....``.``...`.........``````...``...``......``.``.`.
+````````````````````.```````` ```  ```` .`..``.``..`.........```.`...```..``........````....
+```````````..``````````..```.```````````....  ``.............``...`..````````.....````.```.`
+`..```````.``````````.`````````````.....`..  ``.```````......```.....````.```....`````...``.
+..`````````````````.....`.``.`````..........``.` ............````....````.``...`...`..```...
+.```````````````````.````.``.`.```.....`...`...`` ...............`.`..`.``..`..`....```````.
+```.```````````````.`````.````..` `....`....... ` ```.......`....``....```````...`...``````.
+```.``.``.```......``...`````````.`... .......   `````.....`.`......`..`.``..`.`.`..``......
+```.``..```.......``..........``.``.. ....... `  ``````...``.`........`.```...`..`......`..`
+........`````......`........... ```..`......``   ``````....``.```....````.````..`...`.`.````
+..........``..............`.```````........``    ``````.....`.`.`.....``. ` ..`....````````.
+........``.`..............`````````.`..`....`    ``````.....``.`.`....`...``.`..`.`....`....
+..........`..............````.`````..  ... .    ```````.....`````.``.`...`.``.`.`.......`..`
+...........``.....`.......`.`.`````..`... `    ````````.....`.``...`.`.....``.....`...``.```
+.........................``... ````..`..``     ```````......```.``..`.....````.``.``..``.`.`
+..................`.....``....`````...`.. `    ```````......```````....`....`.``..`.....```.
+..................``..........`````...`` ``   `````..`.......`.`.......``..`.`.``...```.``.`
+..............`...`....`.....``````...```` .  ```````........`.`..`.`.`......``...`..`..````
+.............``..``...`.....```````...``` `.  ```````..........``....`....`.`.....`.````.``.
+.............`.`..`..........``````....`.... ``````.`..`............``.....`.```````.`.```..
+.....................`...``.. `````...``...   ``````...`.............`..`.`...``..``.`..`` .
+</pre>
   </div>
 </div>
