--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,9 +1,13 @@
-<h3>Add a Movie</h3>
+<div class="row">
+  <div class="large-6 columns">
+    <h3>Add a Movie</h3>
 
-<%= simple_form_for @movie do |f| %>
-  <%= f.input :title, input_html: {size: 75} %>
-  
-  <%= f.file_field :script %>
+    <%= simple_form_for @movie do |f| %>
+      <%= f.input :title %>
+      
+      <%= f.file_field :script %>
 
-  <%= f.button :submit, 'Add Movie' %>
-<% end %>
+      <%= f.button :submit, 'Add Movie' %>
+    <% end %>
+  </div>
+</div>
