Moved first ascii into partial

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,98 +7,6 @@
   </div>
 
   <div class="small-0 large-7 columns ascii_img">
-    <pre style="font: 10px/5px monospace;">                                                                                            
-                                                                                            
-                                                                                            
-                                                                                            
-                          ````````````````                                                  
-                       `.````            ````                                               
-               `` ``````                    `             `                                 
-              ````.``                                      `                                
-             ``.````                                        `                               
-             ``..```                                        `                               
-            ``.````.                ````..`                  .                              
-            ```````               ``...`....                 `                              
-            ``````               .....``....                  `                             
-             `````               `.````......                 .                             
-            `````               ```````......                  `                            
-          `.``.`.               ``````.......                  `                            
-        `........               ``````.......                   .                           
-         ........               ``````.......                                               
-         `.......               ``````........                   `                          
-         ``......               ``````........                    .                         
-         ........          `..  ```````````.......`                `                     `` 
-         . ......           ......````````````..`                   .                   `   
-         `.......              ..............`                       .                      
-         ..`.....              `.............`                         .             `      
-         .`......               ` `..........                            ``        `        
-         ``......               `````````....                                 ``         `  
-         ``.......               ```````````.                                               
-         `........                ```.`....`..                                              
-         ```......                `````.........                                            
-         `..........`       ``....```............                                           
-         .......`.....`    .......`````.`.`.........                                        
-         ``.`......................`````...............`                                    
-         `. .`...........`......... ``````................                                  
-         ``.............`...`.....`  .....................                                  
-          `............`......``.`. ``....................                                  
-            .................`````.`...``..................                `              ` 
-             .........`......````` ....``............`......                                
-               ...... `......`````.....``...`................              `                
-                 ....``......``.``.`...``.. ```..............`             `                
-                   .`........```.`.....```.```....`...........`                        `    
-                    `........``````.... ```````.`...............              `             
-                   `.........````.`..`. `` ```..........`.`......     `                     
-                  ...........``````...` `  ````........`.``.``...               `           
-                 ``..........``````...`    ````........`````.`....     `  ```   ```         
-                  ..........`..````...`     ```........```......`.. `      `  `  .` ` `     
-                  ............```.`...`  ``````.........``....`.`...     ` ````   `      `  
-                  ...........``.```...``  `````.........`..``..`.....   `  ` ``           ` 
-                  ...........`...`...`.`.``.```........... `` `````..  ` ` ` ``   ` `       
-                  ............```......``` ``............ ``````...... ``    `.      `     `
-                  ............``........```````......... ````````.....   ``   ``   `       `
-                  .............`........`.`````......````` ````.`.....    `     .  ```     .
-                  `............``..`.......```.......`.` .`.`````.....`     ```  `  ``   ` .
-                  `............``...`...``.```.`........`````.``..`...       `  ` ` ```    .
-                   .............`..```....```.`..........`.`.``...`...   ``  `.``   ` ` ` ``
-                   ................``....`..``............. .`...`...`  ````  ` `   .   `` `
-                    ..............````.......``............  ........   ` `````````    ``  `
-                    `............`.````......```........... ``.......`   `` ````  ```  `` ` 
-                      ...........``````........`...........` ``.....``  `` `` ``     `` ``. 
-                       `..........``````...`..``...........````....``.``````.`.```     ```  
-                        `........`.`````....`...............````````` `````.````.`  `` . .` 
-                         `........``.``.`...``..`...........`.`...```` ````.`......`    .`.`
-                          .......``.`````.````...`..........`.`````````````....`..`.` `  ```
-                          `......`.````````````.............`.`````.`.`. ..`..``...`...````.
-                        `````..``.`.````````.```............`.`.````...```..````````.``.`...
-                     `````````.``````````````````............``````....``.``..`````.`````.`.
-                  ````````````.`.`````````````````............``````..````.```.``..``.`.`.``
-                ````````````````` `````.``..`..................``````.```````..`..`..```````
-        ```  ````````````````````` ``.`.`.`....``.............```````.````...`.``.``.``.``..
-   ```````````````````````````.````.`..`..`.```...............`````.`.......`.`..`.``.`.``..
-  ``````````````````````````.`````` ` ``.``.``......`.........`````..`.```..` .````...`....`
-`````````````````````````````````` ````...`.``....`...`........``.``.```..````.````.``...``.
-````````.```````````````.`..`````  .` ``....``.``...`.........``````...``...``......``.``.`.
-````````````````````.```````` ```  ```` .`..``.``..`.........```.`...```..``........````....
-```````````..``````````..```.```````````....  ``.............``...`..````````.....````.```.`
-`..```````.``````````.`````````````.....`..  ``.```````......```.....````.```....`````...``.
-..`````````````````.....`.``.`````..........``.` ............````....````.``...`...`..```...
-.```````````````````.````.``.`.```.....`...`...`` ...............`.`..`.``..`..`....```````.
-```.```````````````.`````.````..` `....`....... ` ```.......`....``....```````...`...``````.
-```.``.``.```......``...`````````.`... .......   `````.....`.`......`..`.``..`.`.`..``......
-```.``..```.......``..........``.``.. ....... `  ``````...``.`........`.```...`..`......`..`
-........`````......`........... ```..`......``   ``````....``.```....````.````..`...`.`.````
-..........``..............`.```````........``    ``````.....`.`.`.....``. ` ..`....````````.
-........``.`..............`````````.`..`....`    ``````.....``.`.`....`...``.`..`.`....`....
-..........`..............````.`````..  ... .    ```````.....`````.``.`...`.``.`.`.......`..`
-...........``.....`.......`.`.`````..`... `    ````````.....`.``...`.`.....``.....`...``.```
-.........................``... ````..`..``     ```````......```.``..`.....````.``.``..``.`.`
-..................`.....``....`````...`.. `    ```````......```````....`....`.``..`.....```.
-..................``..........`````...`` ``   `````..`.......`.`.......``..`.`.``...```.``.`
-..............`...`....`.....``````...```` .  ```````........`.`..`.`.`......``...`..`..````
-.............``..``...`.....```````...``` `.  ```````..........``....`....`.`.....`.````.``.
-.............`.`..`..........``````....`.... ``````.`..`............``.....`.```````.`.```..
-.....................`...``.. `````...``...   ``````...`.............`..`.`...``..``.`..`` .
-</pre>
+    <%= render 'ascii_indy' %>
   </div>
 </div>
