--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -18,7 +18,9 @@
 
   <div class="small-8 large-8 columns">
     <div class="word_context">
-
+      <div class="ascii_right">
+        <%= render 'ascii_et' %>
+      </div>
     </div>
   </div>
 </div>
