--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
 
     <section class="top-bar-section">
       <ul class="right">
-        <li><%= link_to "Add Subtitles", new_movie_path %></li>
+        <li><%#= link_to "Add Subtitles", new_movie_path %></li>
         <% if user_signed_in? %>
           <li class="active"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
         <% else %>
