--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -10,4 +10,18 @@
       <%= f.button :submit, 'Add Movie' %>
     <% end %>
   </div>
+  <div class="large-6 columns">
+    <p>Please use an 'srt' file following standard format</p>
+    <p>Example srt content:</p>
+    <code>
+      17 <br>
+      00:06:27,638 --> 00:06:29,598 <br>
+      Let us hurry. <br>
+      There is nothing to fear here. <br><br>
+      18 <br>
+      00:06:32,017 --> 00:06:34,519 <br>
+      That's what scares me. <br>
+    </code>
+    
+  </div>
 </div>
